--- a/notebooks/02_model.ipynb
+++ b/notebooks/02_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f4046e86",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "15efcc38",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
          "type": "string"
         }
        ],
-       "ref": "e7080ec6-c08e-4d18-9ddf-4a648ff631c3",
+       "ref": "9bc36aba-7342-433d-9280-f32247692f2b",
        "rows": [
         [
          "0",
@@ -330,7 +330,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "60e2f3f9",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "1f25fe8b",
    "metadata": {},
    "outputs": [],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "0cf7c3b5",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "011e420f",
    "metadata": {},
    "outputs": [],
@@ -479,8 +479,8 @@
     "\n",
     "    cv_scores = cross_val_score(\n",
     "        model,\n",
-    "        X,\n",
-    "        y,\n",
+    "        X_train,\n",
+    "        y_train,\n",
     "        cv=cv,\n",
     "        scoring=\"roc_auc\",\n",
     "        n_jobs=-1\n",
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "f1a47ec1",
    "metadata": {},
    "outputs": [],
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "87d699b9",
    "metadata": {},
    "outputs": [
@@ -567,9 +567,9 @@
       " [17 52]]\n",
       "\n",
       "Cross-Validation (5-fold) ROC AUC:\n",
-      "  Scores: [0.89538867 0.86804813 0.8473262  0.85614973 0.88525462]\n",
-      "  Mean:   0.8704\n",
-      "  Std:    0.0178\n"
+      "  Scores: [0.86157025 0.84855372 0.8938349  0.84785354 0.88657407]\n",
+      "  Mean:   0.8677\n",
+      "  Std:    0.0192\n"
      ]
     }
    ],
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "ef05221e",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
        "{'lr_clf__C': 1, 'lr_clf__penalty': 'l2', 'lr_clf__solver': 'liblinear'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "69cb28b1",
    "metadata": {},
    "outputs": [
@@ -679,9 +679,9 @@
       " [17 52]]\n",
       "\n",
       "Cross-Validation (5-fold) ROC AUC:\n",
-      "  Scores: [0.89907773 0.86697861 0.84826203 0.8578877  0.89017418]\n",
-      "  Mean:   0.8725\n",
-      "  Std:    0.0192\n"
+      "  Scores: [0.8661157  0.85330579 0.90073145 0.85058923 0.88383838]\n",
+      "  Mean:   0.8709\n",
+      "  Std:    0.0190\n"
      ]
     }
    ],
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "3c472792",
    "metadata": {},
    "outputs": [
@@ -737,9 +737,9 @@
       " [19 50]]\n",
       "\n",
       "Cross-Validation (5-fold) ROC AUC:\n",
-      "  Scores: [0.89848485 0.8618984  0.83863636 0.86824866 0.89529318]\n",
-      "  Mean:   0.8725\n",
-      "  Std:    0.0222\n"
+      "  Scores: [0.86095041 0.86487603 0.88234065 0.88457492 0.86174242]\n",
+      "  Mean:   0.8709\n",
+      "  Std:    0.0104\n"
      ]
     }
    ],
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "f802aac4",
    "metadata": {},
    "outputs": [
@@ -787,16 +787,16 @@
      "data": {
       "text/plain": [
        "{'clf__bootstrap': True,\n",
-       " 'clf__class_weight': 'balanced_subsample',\n",
-       " 'clf__criterion': 'entropy',\n",
-       " 'clf__max_depth': 14,\n",
-       " 'clf__max_features': 'sqrt',\n",
-       " 'clf__min_samples_leaf': 1,\n",
-       " 'clf__min_samples_split': 13,\n",
-       " 'clf__n_estimators': 363}"
+       " 'clf__class_weight': None,\n",
+       " 'clf__criterion': 'gini',\n",
+       " 'clf__max_depth': 9,\n",
+       " 'clf__max_features': 0.5,\n",
+       " 'clf__min_samples_leaf': 4,\n",
+       " 'clf__min_samples_split': 14,\n",
+       " 'clf__n_estimators': 209}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,9 +821,9 @@
     "\n",
     "param_dist = {\n",
     "    \"clf__n_estimators\": randint(50, 500),\n",
-    "    \"clf__max_depth\": randint(3, 15),\n",
+    "    \"clf__max_depth\": randint(3, 10),\n",
     "    \"clf__min_samples_split\": randint(2, 20),\n",
-    "    \"clf__min_samples_leaf\": randint(1, 10),\n",
+    "    \"clf__min_samples_leaf\": randint(1, 20),\n",
     "    # \"clf__max_features\": uniform(0.3, 0.5),\n",
     "    \"clf__max_features\": [\"sqrt\", \"log2\", 0.5],\n",
     "    'clf__criterion': ['gini', 'entropy'],\n",
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "d8af51f3",
    "metadata": {},
    "outputs": [
@@ -865,31 +865,31 @@
       "=== Random Forest (Tuned) ===\n",
       "\n",
       "Training performance:\n",
-      "  Accuracy: 0.8961\n",
-      "  ROC AUC : 0.9712\n",
+      "  Accuracy: 0.8890\n",
+      "  ROC AUC : 0.9589\n",
       "\n",
       "Validation performance:\n",
-      "  Accuracy: 0.8268\n",
-      "  ROC AUC : 0.8490\n",
+      "  Accuracy: 0.8045\n",
+      "  ROC AUC : 0.8551\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.86      0.85      0.86       110\n",
-      "           1       0.77      0.78      0.78        69\n",
+      "           0       0.81      0.89      0.85       110\n",
+      "           1       0.79      0.67      0.72        69\n",
       "\n",
-      "    accuracy                           0.83       179\n",
-      "   macro avg       0.82      0.82      0.82       179\n",
-      "weighted avg       0.83      0.83      0.83       179\n",
+      "    accuracy                           0.80       179\n",
+      "   macro avg       0.80      0.78      0.79       179\n",
+      "weighted avg       0.80      0.80      0.80       179\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[94 16]\n",
-      " [15 54]]\n",
+      "[[98 12]\n",
+      " [23 46]]\n",
       "\n",
       "Cross-Validation (5-fold) ROC AUC:\n",
-      "  Scores: [0.91317523 0.8776738  0.8394385  0.86323529 0.88791384]\n",
-      "  Mean:   0.8763\n",
-      "  Std:    0.0246\n"
+      "  Scores: [0.87252066 0.85371901 0.90909091 0.87984007 0.87405303]\n",
+      "  Mean:   0.8778\n",
+      "  Std:    0.0179\n"
      ]
     }
    ],
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "17d110fe",
    "metadata": {},
    "outputs": [
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "b9de7b9f",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1003,7 @@
        " 'clf__subsample': np.float64(0.9771638815650077)}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "8baa03ed",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1080,7 @@
        "np.float64(0.8851101796438787)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "79dd399e",
    "metadata": {},
    "outputs": [
@@ -1125,9 +1125,9 @@
       " [20 49]]\n",
       "\n",
       "Cross-Validation (5-fold) ROC AUC:\n",
-      "  Scores: [0.92108037 0.87032086 0.84665775 0.86530749 0.86983114]\n",
-      "  Mean:   0.8746\n",
-      "  Std:    0.0248\n"
+      "  Scores: [0.88471074 0.85909091 0.90386625 0.87920875 0.89867424]\n",
+      "  Mean:   0.8851\n",
+      "  Std:    0.0158\n"
      ]
     }
    ],
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "910f1b28",
    "metadata": {},
    "outputs": [
